# structureio

./: Cargo.toml  flake.nix
src/: lib.rs  scheduler.rs
src/buf/: io_buf.rs  io_buf_mut.rs  mod.rs  slice.rs  slice_mut.rs
src/driver/: mod.rs  util.rs
src/driver/uring/: lifecycle.rs  mod.rs  op.rs
src/executor/: executor.rs  mod.rs  queue.rs  scheduler.rs  task.rs
src/macros/: mod.rs  pin.rs
src/task/: debugging.rs  header.rs  join.rs  mod.rs  raw.rs  state.rs  task_impl.rs  utils.rs  waker_fn.rs  yield_now.rs
src/utils/: linked_list.rs  mod.rs  thread_id.rs
