[package]
name = "simpleio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = "0.5.3"
slotmap = "1.0.6"
scopeguard = "1.1.0"
libc = "0.2.126"
scoped-tls = "1.0.0"
sptr = "0.3.2"
tracing = "0.1.36"
log = "0.4.17"
env_logger = "0.9.0"
futures-concurrency = "3.0.2"
once_cell = "1.13.0"


[features]
debugging = []
